change ui look in solakat

--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
 		</div>
 		
 		 <div class="menu-holder">
-			<div class="menu-button" onclick="love()">
+			<div class="menu-button" class="mobile-right" onclick="love()">
 				<div class="me-nu"></div>
 				<div class="menu"></div>
 				<div class="me-nu"></div>
 				<div class="menu"></div>
 		 	</div>		
-		 	  <a class="menu-side-button" href="shop.html">Go to Store</a>
+		 	  	<a class="menu-side-button" class="mobile-left" href="shop.html">Go to Store</a>
 		 </div>
     </div>
     <div class="topnav" id="myTopnav">
