change ui look in solakat

--- a/index.html
+++ b/index.html
@@ -126,21 +126,21 @@
 		<p>Testimonials</p>
 		<div class="testimony1-wrap">
 			<div class="testimony1">
-				<img src="images/white (1).jpg">
+				<img src="images/man-testimony.jpg">
 			</div>
 			<div class="testimony1-text">
 					<h3>Naomi Bazuaye <br><span>Ceo, Nayomi couture</span></h3>
-					From multinationals to fast-growing startups and non-ptofits, we're helping our customers achieve brand immersion and build brand awareness.
+					From multinationals to fast-growing startups and non-ptofits, we're helping our customers achieve brand immersion and build brand.
+					<a class="testimonials-button" href="#">More testimonials</a>
 			</div>
 		</div>
 		<div class="testimony1-wrap">
 			<div class="testimony1">
-				<img src="images/white (2).jpg">
+				<img src="images/woman-testimony.jpg">
 			</div>
 			<div class="testimony1-text">
 					<h3>Naomi Bazuaye <br><span>Ceo, Nayomi couture</span></h3>
 					From multinationals to fast-growing startups and non-ptofits, we're helping our customers achieve brand immersion and build brand awareness.
-					<a class="testimonials-button" href="#">More testimonials</a>
 			</div>
 		</div>
 	</div>
