--- a/products.html
+++ b/products.html
@@ -36,37 +36,37 @@
 		<h1>We are ready to go extra <br>mile and give you the best.</h1>
 	</div>
 	<div class="third-section-wrap-product">
-		<div class="third-section-product" style="background-image: url('images/one (4).jpg');">
+		<div class="third-section-product" style="background-image: url('images/wide.jpg');">
 		 	<div class="overlay"> 
 				<h3> We are Detailed</h3>
 					We do end-to-end enviromental branding including backdrops, venue branding, glass branding, and much more...
 			</div>
 		</div>
-		<div class="third-section-product" style="background-image: url('images/one (4).jpg');">
+		<div class="third-section-product" style="background-image: url('images/wide.jpg');">
 		 	<div class="overlay"> 
 				<h3> We are Dependable </h3>
 					We do end-to-end enviromental branding including backdrops, venue branding, glass branding, and much more...
 			</div>
 		</div>
-		<div class="third-section-product" style="background-image: url('images/one (4).jpg');">
+		<div class="third-section-product" style="background-image: url('images/wide.jpg');">
 		 	<div class="overlay"> 
 				<h3> We are Creative</h3>
 					We do end-to-end enviromental branding including backdrops, venue branding, glass branding, and much more...
 			</div>
 		</div>
-		<div class="third-section-product" style="background-image: url('images/one (4).jpg');">
+		<div class="third-section-product" style="background-image: url('images/wide.jpg');">
 		 	<div class="overlay"> 
 				<h3> We are Daring</h3>
 					We do end-to-end enviromental branding including backdrops, venue branding, glass branding, and much more...
 			</div>
 		</div>
-		<div class="third-section-product" style="background-image: url('images/one (4).jpg');">
+		<div class="third-section-product" style="background-image: url('images/wide.jpg');">
 		 	<div class="overlay"> 
 				<h3> We are Resourceful</h3>
 					We do end-to-end enviromental branding including backdrops, venue branding, glass branding, and much more... 
 			</div>
 		</div>
-		<div class="third-section-product" style="background-image: url('images/one (4).jpg');">
+		<div class="third-section-product" style="background-image: url('images/wide.jpg');">
 		 	<div class="overlay"> 
 				<h3> We are Personal</h3>
 					We do end-to-end enviromental branding including backdrops, venue branding, glass branding, and much more...
@@ -91,12 +91,12 @@
 		</div>
 		<div id="gallery-content">
 			<div id="gallery-content-center">
-				<img src="images/one (4).jpg" class="all enviromental"/>
-				<img src="images/one (5).jpg" class="all corporate">
-				<img src="images/one.jpg" class="all enviromental"/>
-				<img src="images/one (6).jpg" class="all enviromental"/>
-				<img src="images/one (7).jpg" class="all corporate">
-				<img src="images/one (9).jpg" class="all enviromental"/>
+				<img src="images/bag.jpg" class="all enviromental"/>
+				<img src="images/table.jpg" class="all corporate">
+				<img src="images/wide.jpg" class="all enviromental"/>
+				<img src="images/shirt.jpg" class="all enviromental"/>
+				<img src="images/banner.jpg" class="all corporate">
+				<img src="images/window.jpg" class="all enviromental"/>
 				
 			</div>
 		</div>
