--- a/shop.html
+++ b/shop.html
@@ -31,95 +31,95 @@
  			<h1>Create an order in 3 simple steps</h1>
  		</div>
  		<div class="create-img">
- 			<img src="images/one (14).jpg">
+ 			<img src="images/hoodie.jpg">
  		</div>
     </div>
 
     <div class="wrap-wrap">
     	<div class="section-wrap">
-			<div class="third-section1" style="background-image: url('images/one (15).jpg');"> </div>
-			Awards
+			<div class="third-section1" style="background-image: url('images/cardigan.jpg');"> </div>
+			Cardigan
 		</div>
 		<div class="section-wrap">
-			<div class="third-section1" style="background-image: url('images/one (18).jpg');"> </div>
-			Backdrops
+			<div class="third-section1" style="background-image: url('images/red-banner.jpg');"> </div>
+			Backdrop
 		</div>
 		<div class="section-wrap">
-			<div class="third-section1" style="background-image: url('images/one (7).jpg');"> </div>
+			<div class="third-section1" style="background-image: url('images/banner.jpg');"> </div>
 			Banner
 		</div>
 		<div class="section-wrap">
-			<div class="third-section1" style="background-image: url('images/one (42).jpg');"> </div>	
-			Button badges
+			<div class="third-section1" style="background-image: url('images/hand-cuff.jpg');"> </div>	
+			Cuff_links
 		</div>
     	<div class="section-wrap">
-			<div class="third-section1" style="background-image: url('images/one (9).jpg');"> </div>
-			Awards
+			<div class="third-section1" style="background-image: url('images/stickers.jpg');"> </div>
+			Labels
 		</div>
 		<div class="section-wrap">
-			<div class="third-section1" style="background-image: url('images/one (35).jpg');"> </div>
-			Backdrops
+			<div class="third-section1" style="background-image: url('images/journal.jpg');"> </div>
+			Journals
 		</div>
 		<div class="section-wrap">
-			<div class="third-section1" style="background-image: url('images/one (22).jpg');"> </div>
-			Banner
+			<div class="third-section1" style="background-image: url('images/flash-drive.jpg');"> </div>
+			Flash-drives
 		</div>
 		<div class="section-wrap">
-			<div class="third-section1" style="background-image: url('images/one (28).jpg');"> </div>	
-			Button badges
+			<div class="third-section1" style="background-image: url('images/charger.jpg');"> </div>	
+			Charger
 		</div>
     	<div class="section-wrap">
-			<div class="third-section1" style="background-image: url('images/one (21).jpg');"> </div>
-			Awards
+			<div class="third-section1" style="background-image: url('images/key-holder.jpg');"> </div>
+			Key-holders
 		</div>
 		<div class="section-wrap">
-			<div class="third-section1" style="background-image: url('images/one (38).jpg');"> </div>
-			Backdrops
+			<div class="third-section1" style="background-image: url('images/belt.jpg');"> </div>
+			Lanyards
 		</div>
 		<div class="section-wrap">
-			<div class="third-section1" style="background-image: url('images/one (10).jpg');"> </div>
-			Banner
+			<div class="third-section1" style="background-image: url('images/socks.jpg');"> </div>
+			Socks
 		</div>
 		<div class="section-wrap">
-			<div class="third-section1" style="background-image: url('images/one (25).jpg');"> </div>	
-			Button badges
+			<div class="third-section1" style="background-image: url('images/mug.jpg');"> </div>	
+			Mugs
 		</div>
     	<div class="section-wrap">
-			<div class="third-section1" style="background-image: url('images/one (29).jpg');"> </div>
-			Awards
+			<div class="third-section1" style="background-image: url('images/mouse-pad.jpg');"> </div>
+			Mouse-pad
 		</div>
 		<div class="section-wrap">
-			<div class="third-section1" style="background-image: url('images/one (24).jpg');"> </div>
-			Backdrops
+			<div class="third-section1" style="background-image: url('images/head-set.jpg');"> </div>
+			Headset
 		</div>
 		<div class="section-wrap">
-			<div class="third-section1" style="background-image: url('images/one (15).jpg');"> </div>
-			Banner
+			<div class="third-section1" style="background-image: url('images/smile.jpg');"> </div>
+			Plastic ID-Card
 		</div>
 		<div class="section-wrap">
-			<div class="third-section1" style="background-image: url('images/one (13).jpg');"> </div>	
-			Button badges
+			<div class="third-section1" style="background-image: url('images/board.jpg');"> </div>	
+			Plastic business card
 		</div>
     	<div class="section-wrap">
-			<div class="third-section1" style="background-image: url('images/one (3).jpg');"> </div>
-			Awards
+			<div class="third-section1" style="background-image: url('images/t-shirt.jpg');"> </div>
+			T-shirts
 		</div>
 		<div class="section-wrap">
-			<div class="third-section1" style="background-image: url('images/one (25).jpg');"> </div>
-			Backdrops
+			<div class="third-section1" style="background-image: url('images/pack-bag.jpg');"> </div>
+			Pack-bag
 		</div>
 		<div class="section-wrap">
-			<div class="third-section1" style="background-image: url('images/one (1).jpg');"> </div>
-			Banner
+			<div class="third-section1" style="background-image: url('images/throw-pillow.jpg');"> </div>
+			Throw-pillow
 		</div>
 		<div class="section-wrap">
-			<div class="third-section1" style="background-image: url('images/one (2).jpg');"> </div>	
-			 Button badges
+			<div class="third-section1" style="background-image: url('images/phone.jpg');"> </div>	
+			 Phone-stand
 		</div>
  	</div>
 	<div class="request-section-wrap">
 		<div class="request-img">
-			<img src="images/one (1).png">
+			<img src="images/man.png">
 		</div>
 		<div class="request-section-side">
 			<h2>Can't find what you're<br> looking for?	</h2>
