change ui looks

--- a/index.html
+++ b/index.html
@@ -44,22 +44,22 @@
 		</div>
 	</div>
 	<div class="third-section-wrap">
-		<div class="third-section" style="background-image: url('images/one (6).jpg');"> <div class="overlay"> 
+		<div class="third-section" style="background-image: url('images/table.jpg');"> <div class="overlay"> 
 			<h3> Enviromental Branding</h3>
 				We do end-to-end enviromental branding including backdrops, venue branding, glass branding, and much more...
 		</div>
 	</div>
-		<div class="third-section" style="background-image: url('images/one (6).jpg');"> <div class="overlay"> 
+		<div class="third-section" style="background-image: url('images/bag.jpg');"> <div class="overlay"> 
 			<h3> Brand Experience Design & Management</h3>
 				We do end-to-end enviromental branding including backdrops, venue branding, glass branding, and much more...
 		</div>
 	</div>
-		<div class="third-section" style="background-image: url('images/one (8).jpg');"> <div class="overlay"> 
+		<div class="third-section" style="background-image: url('images/table.jpg');"> <div class="overlay"> 
 			<h3> Event Branding </h3>
 				We do end-to-end enviromental branding including backdrops, venue branding, glass branding, and much more...
 		</div>
 	</div>
-		<div class="third-section" style="background-image: url('images/one (26).jpg');"> <div class="overlay"> 
+		<div class="third-section" style="background-image: url('images/book-case.jpg');"> <div class="overlay"> 
 			<h3> Brandeded sourvenirs & Promotional materials</h3>
 				We do end-to-end enviromental branding including backdrops, venue branding, glass branding, and much more...
 		</div>
