--- a/shop.html
+++ b/shop.html
@@ -8,16 +8,16 @@
 </head>
 <body>
 	<div class="header">
-		<div class="header-logo">
+		<div class="header-logo" >
 			<img src="images/solakat_logo.png">
 		</div>
-		<div class="pages-link">
-				<a href="#Contact">Home</a>
- 		    	<a href="#Process">Products categories</a>
- 		    	<a href="#Portfolio">Cart</a>
+		<div class="pages-link" >
+				<a href="#Contact" class="mobileHide">Home</a>
+ 		    	<a href="#Process" class="mobileHide">Products categories</a>
+ 		    	<a href="#Portfolio" class="mobileHide">Cart</a>
  		    		
-       	 	 <a class="menu-side-button1" href="shop.html">Sign in</a>
-        	 <a class="menu-side-button1" href="shop.html">Sign up</a>
+       	 	 <a class="menu-side-button1" href="shop.html" >Sign in</a>
+        	 <a class="menu-side-button1" href="shop.html" >Sign up</a>
         </div>
     </div>
 
@@ -122,7 +122,7 @@
 			<img src="images/man.png">
 		</div>
 		<div class="request-section-side">
-			<h2>Can't find what you're<br> looking for?	</h2>
+			<h2>Can't find what you're looking for?	</h2>
 			<div class="button3"> <a href="#">More about us</a></div>
 		</div>
 	</div>
