--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title></title>
+	<title> Solakat</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" type="text/css" href="solakat.css">
@@ -187,14 +187,14 @@
 			<h3>Ibadan</h3>
 			+23482945975<br>
 			hello@solakat.com.ng,<br>
-			UI/Ojoo Express way,<br>
+			UI/Ojoo Express way<br>
 			Adjacent venture mall<br>
 			Samonda.<br><br>
 			<h3>Lagos</h3>
 			+23482945975<br>
 			+23482945975<br>
-			hello@solakat.com.ng,<br>
-			70, Olonade street,
+			hello@solakat.com.ng<br>
+			70, Olonade street
 			Alagomeji,Yaba.
 		</div>
 	</div>
