--- a/products.html
+++ b/products.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title></title>
+	<title>Products</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" type="text/css" href="solakat.css">
@@ -120,18 +120,17 @@
 			<h3>Ibadan</h3>
 			+23482945975<br>
 			hello@solakat.com.ng,<br>
-			UI/Ojoo Express way,<br>
+			UI/Ojoo Express way<br>
 			Adjacent venture mall<br>
 			Samonda.<br><br>
 			<h3>Lagos</h3>
 			+23482945975<br>
 			+23482945975<br>
-			hello@solakat.com.ng,<br>
-			70, Olonade street,
+			hello@solakat.com.ng<br>
+			70, Olonade street
 			Alagomeji,Yaba.
 		</div>
 	</div>
-
 
 	<!-- <script src="https://code.jquery.com/jquery-3.5.0.min.js" integrity="sha256-xNzN2a4ltkB44Mc/Jz3pT4iU1cmeR0FkXs4pru/JxaQ=" crossorigin="anonymous"></script>
 	<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js" integrity="sha256-VazP97ZCwtekAsvgPBSUwPFKdrwD3unUfSGVYrahUqU=" crossorigin="anonymous"></script> -->
