change ui menu and looks

--- a/index.html
+++ b/index.html
@@ -23,13 +23,22 @@
 		 </div>
     </div>
     <div class="topnav" id="myTopnav">
+    	<div class="header">
+    		<div class="header-logo">
+				<img src="images/solakat_logo.png">
+			</div>
+			<button class="menu-close-button" onclick="love()"><img src="images/cancel.png"></button>
+		</div>
+		<div class="menu-item">
   			<a href="#Contact">Home</a>
- 		    <a href="#Process">About-Us</a>
- 		    <a href="#Portfolio">Services</a>
-  			<a href="#Services">Projects</a>
-  			<a href="#About">Testimonials</a>
-  			<a href="#About">Contacts</a>
-  			<a href="#Catalogue">Catalogue</a>
+ 		    <a href="#Process">Contact</a>
+ 		    <br>
+ 		    <a href="#Portfolio">About Us</a>
+  			<a href="#Services">Catalogue</a>
+  			<a href="#About" class="wide">Services</a>
+  			<a href="#About" class="wide">Projects</a>
+  			<a href="#Catalogue" class="wide">Testimonials</a>
+  		</div>
     </div>
 	<div class="banner">
         <div class="banner-text">
@@ -44,25 +53,33 @@
 		</div>
 	</div>
 	<div class="third-section-wrap">
-		<div class="third-section" style="background-image: url('images/table.jpg');"> <div class="overlay"> 
+		<div class="third-section" style="background-image: url('images/table.jpg');"> 
+			<div class="overlay"> 
 			<h3> Enviromental Branding</h3>
-				We do end-to-end enviromental branding including backdrops, venue branding, glass branding, and much more...
-		</div>
+				We do end-to-end enviromental branding including backdrops, venue branding, glass branding, and much more... <br>
+				<a href="#" class="read-more-btn"> Read more</a> 
+		    </div>
 	</div>
-		<div class="third-section" style="background-image: url('images/bag.jpg');"> <div class="overlay"> 
+		<div class="third-section" style="background-image: url('images/bag.jpg');"> 
+			<div class="overlay"> 
 			<h3> Brand Experience Design & Management</h3>
-				We do end-to-end enviromental branding including backdrops, venue branding, glass branding, and much more...
-		</div>
+				We do end-to-end enviromental branding including backdrops, venue branding, glass branding, and much more... <br>
+				<a href="#" class="read-more-btn"> Read more</a> 
+			</div>
 	</div>
-		<div class="third-section" style="background-image: url('images/table.jpg');"> <div class="overlay"> 
+		<div class="third-section" style="background-image: url('images/table.jpg');"> 
+			<div class="overlay"> 
 			<h3> Event Branding </h3>
-				We do end-to-end enviromental branding including backdrops, venue branding, glass branding, and much more...
-		</div>
+				We do end-to-end enviromental branding including backdrops, venue branding, glass branding, and much more... <br>
+				<a href="#" class="read-more-btn"> Read more</a> 
+			</div>
 	</div>
-		<div class="third-section" style="background-image: url('images/book-case.jpg');"> <div class="overlay"> 
+		<div class="third-section" style="background-image: url('images/book-case.jpg');"> 
+			<div class="overlay"> 
 			<h3> Brandeded sourvenirs & Promotional materials</h3>
-				We do end-to-end enviromental branding including backdrops, venue branding, glass branding, and much more...
-		</div>
+				We do end-to-end enviromental branding including backdrops, venue branding, glass branding, and much more... <br>
+				<a href="#" class="read-more-btn"> Read more</a> 
+			</div>
 	</div>	
 	</div>
 
@@ -110,11 +127,11 @@
 	</div>
 
 	<div class="eight-section-wrap">
-		<p>We work and partner with top brands and organizations<br> to help achieve brand immerson and total brand awareness.</p>
+		We work and partner with top brands and organizations<br> to help achieve brand immerson and total brand awareness.
 	</div>
 
 	<div class="ninth-section-wrap">
-		<img src="images/uber.png">
+		<img src="images/uber.png" alt="uber.png">
 		<img src="images/8.png">
 		<img src="images/gugu.png">
 		<img src="images/11.jfif">
@@ -123,7 +140,7 @@
 	</div>
 
 	<div class="eleven-section-wrap">
-		<p>Testimonials</p>
+		<h2>Testimonials</h2>
 		<div class="testimony1-wrap">
 			<div class="testimony1">
 				<img src="images/man-testimony.jpg">
@@ -131,7 +148,6 @@
 			<div class="testimony1-text">
 					<h3>Naomi Bazuaye <br><span>Ceo, Nayomi couture</span></h3>
 					From multinationals to fast-growing startups and non-ptofits, we're helping our customers achieve brand immersion and build brand.
-					<a class="testimonials-button" href="#">More testimonials</a>
 			</div>
 		</div>
 		<div class="testimony1-wrap">
@@ -143,30 +159,33 @@
 					From multinationals to fast-growing startups and non-ptofits, we're helping our customers achieve brand immersion and build brand awareness.
 			</div>
 		</div>
+		<button class="testimonials-button">More testimonials</button>
 	</div>
 	<div class="twelve-section">
         <div class="get-in-touch">
 			<h1>Get in Touch</h1>
 			You can reach out by filling the form below, a member of our team would reach out promptly.
 		</div>
-		<div class="input">
-			<input type="text" name="Name" placeholder="Name">
-		</div>
-		<div class="input">
-			<input type="text" name="Email" placeholder="Email">
-		</div>
-		<div class="send-message">
-			<a class="form-button" href="#">Send message</a>
-		</div>	
+		<form>
+			<div class="input">
+				<input type="text" name="Name" placeholder="Name">
+			</div>
+			<div class="input">
+				<input type="text" name="Email" placeholder="Email">
+			</div>
+			<div class="send-message">
+				<a class="form-button" href="#">Send message</a>
+			</div>	
+		</form>
 		
 		<div class="form-wrap">
 			<div class="get-in-touch">
 				<h1>Sign up for our Newsletters</h1>
 			</div>	
-			<div class="input-mail">
+			<form class="input-mail">
 				<input type="text" name="Email" placeholder="Enter your Email">
 				<a class="sign-up-button" href="#">Sign up</a>
-			</div>
+			</form>
 		</div>
 	</div>
 	
