more ui changes and images optimization

--- a/index.html
+++ b/index.html
@@ -159,8 +159,56 @@
 					From multinationals to fast-growing startups and non-ptofits, we're helping our customers achieve brand immersion and build brand awareness.
 			</div>
 		</div>
-		<button class="testimonials-button">More testimonials</button>
+		<div class="testimonials-button-wrap">
+		<button class="testimonials-button" onclick="light()">More testimonials</button>
+		</div>
 	</div>
+
+	<div class="more-testimony-wrap" id="myTestimony">
+		<div class="header">
+    		<div class="header-text">
+				<h2> What our Client says about us</h2>
+			</div>
+			<button class="menu-close-button" onclick="light()"><img src="images/cancel.png"></button>
+		</div>
+		<div class="testimony1-wrap">
+			<div class="testimony1">
+				<img src="images/man-testimony.jpg">
+			</div>
+			<div class="testimony1-text">
+					<h3>Naomi Bazuaye <br><span>Ceo, Nayomi couture</span></h3>
+					From multinationals to fast-growing startups and non-ptofits, we're helping our customers achieve brand immersion and build brand.
+			</div>
+		</div>
+		<div class="testimony1-wrap">
+			<div class="testimony1">
+				<img src="images/woman-testimony.jpg">
+			</div>
+			<div class="testimony1-text">
+					<h3>Naomi Bazuaye <br><span>Ceo, Nayomi couture</span></h3>
+					From multinationals to fast-growing startups and non-ptofits, we're helping our customers achieve brand immersion and build brand awareness.
+			</div>
+		</div>
+		<div class="testimony1-wrap">
+			<div class="testimony1">
+				<img src="images/man-testimony.jpg">
+			</div>
+			<div class="testimony1-text">
+					<h3>Naomi Bazuaye <br><span>Ceo, Nayomi couture</span></h3>
+					From multinationals to fast-growing startups and non-ptofits, we're helping our customers achieve brand immersion and build brand.
+			</div>
+		</div>
+		<div class="testimony1-wrap">
+			<div class="testimony1">
+				<img src="images/woman-testimony.jpg">
+			</div>
+			<div class="testimony1-text">
+					<h3>Naomi Bazuaye <br><span>Ceo, Nayomi couture</span></h3>
+					From multinationals to fast-growing startups and non-ptofits, we're helping our customers achieve brand immersion and build brand awareness.
+			</div>
+		</div>
+	</div>
+
 	<div class="twelve-section">
         <div class="get-in-touch">
 			<h1>Get in Touch</h1>
@@ -203,18 +251,26 @@
 			<a href="#">Debit/Credit</a><br>
 		</div>
 		<div class="third-footer">
-			<h3>Ibadan</h3>
-			+23482945975<br>
-			hello@solakat.com.ng,<br>
-			UI/Ojoo Express way<br>
-			Adjacent venture mall<br>
-			Samonda.<br><br>
-			<h3>Lagos</h3>
-			+23482945975<br>
-			+23482945975<br>
-			hello@solakat.com.ng<br>
-			70, Olonade street
-			Alagomeji,Yaba.
+			<div class="footer-address">
+				<span>
+					<img src="images/location.png">
+						Ibadan
+				</span>
+				+23482945975<br> hello@solakat.com.ng <br> UI/Ojoo Express wayAdjacent venture mall Samonda.
+			</div>
+
+			<div class="footer-address">
+				<span>
+					<img src="images/location.png">
+						Lagos
+				</span>
+				+23482945975 <br> +23482945975 <br> hello@solakat.com.ng <br> 70, Olonade street Alagomeji,Yaba.
+			</div>
+			<div class="social-icons">
+				<img src="images/twitter.png">
+				<img src="images/facebook.png">
+				<img src="images/instagram.png">
+			</div>
 		</div>
 	</div>
 
