--- a/products.html
+++ b/products.html
@@ -117,18 +117,26 @@
 			<a href="#">Debit/Credit</a><br>
 		</div>
 		<div class="third-footer">
-			<h3>Ibadan</h3>
-			+23482945975<br>
-			hello@solakat.com.ng,<br>
-			UI/Ojoo Express way<br>
-			Adjacent venture mall<br>
-			Samonda.<br><br>
-			<h3>Lagos</h3>
-			+23482945975<br>
-			+23482945975<br>
-			hello@solakat.com.ng<br>
-			70, Olonade street
-			Alagomeji,Yaba.
+			<div class="footer-address">
+				<span>
+					<img src="images/location.png">
+						Ibadan
+				</span>
+				+23482945975<br> hello@solakat.com.ng <br> UI/Ojoo Express wayAdjacent venture mall Samonda.
+			</div>
+
+			<div class="footer-address">
+				<span>
+					<img src="images/location.png">
+						Lagos
+				</span>
+				+23482945975 <br> +23482945975 <br> hello@solakat.com.ng <br> 70, Olonade street Alagomeji,Yaba.
+			</div>
+			<div class="social-icons">
+				<img src="images/twitter.png">
+				<img src="images/facebook.png">
+				<img src="images/instagram.png">
+			</div>
 		</div>
 	</div>
 
