--- a/shop.html
+++ b/shop.html
@@ -129,28 +129,30 @@
 
 	<div class="pre-footer-wrap">
 		<div class="pre-footer-section"> 
-			<div class="overlay">
-				 <h3>100% Guarantee</h3> What you see is what you get
+			<div class="overlay text-center">
+				 <h3>100% Guarantee</h3> What you see is what you get<br>
+				 <a href="#" class="read-more-btn"> View policy return</a>
 			</div> 
 		</div>
 		<div class="pre-footer-section"> 
-			<div class="overlay"> 
+			<div class="overlay text-center"> 
 				<h3>Free Excellent designs</h3> designs are free for orders above N50,000 attracts a flat rate design of N2000
 			</div> 
 		</div>
 		<div class="pre-footer-section"> 
-			<div class="overlay"> 
+			<div class="overlay text-center"> 
 				<h3>Free delivery anywhere in Nigeria</h3> designs are free for orders above N50,000 attracts a flat rate design of N2000 
 			</div> 
 		</div>
 		<div class="pre-footer-section"> 
-			<div class="overlay"> 
-				<h3>Responsive customer support</h3> we got your back always call, chat or SMS.
+			<div class="overlay text-center"> 
+				<h3>Responsive customer support</h3> we got your back always call, chat or SMS.<br>
+				<a href="#" class="read-more-btn"> Contact us now</a>
 			</div> 
 		</div>
 
 		<div class="pre-footer-section"> 
-			<div class="overlay"> 
+			<div class="overlay text-center"> 
 				<h3>Best pricing</h3> Coupled with free designs, delivery our prices are very competitive with no compromise on quality
 			</div> 
 		</div>	
@@ -170,20 +172,29 @@
 			<a href="#">Debit/Credit</a><br>
 		</div>
 		<div class="third-footer">
-			<h3>Ibadan</h3>
-			+23482945975<br>
-			hello@solakat.com.ng,<br>
-			UI/Ojoo Express way<br>
-			Adjacent venture mall<br>
-			Samonda.<br><br>
-			<h3>Lagos</h3>
-			+23482945975<br>
-			+23482945975<br>
-			hello@solakat.com.ng<br>
-			70, Olonade street
-			Alagomeji,Yaba.
+			<div class="footer-address">
+				<span>
+					<img src="images/location.png">
+						Ibadan
+				</span>
+				+23482945975<br> hello@solakat.com.ng <br> UI/Ojoo Express wayAdjacent venture mall Samonda.
+			</div>
+
+			<div class="footer-address">
+				<span>
+					<img src="images/location.png">
+						Lagos
+				</span>
+				+23482945975 <br> +23482945975 <br> hello@solakat.com.ng <br> 70, Olonade street Alagomeji,Yaba.
+			</div>
+			<div class="social-icons">
+				<img src="images/twitter.png">
+				<img src="images/facebook.png">
+				<img src="images/instagram.png">
+			</div>
 		</div>
 	</div>
+
 	<script type="text/javascript" src="solakat.js"></script>
 </body>
 </html>
